--- a/redhat/kernel.changelog-8.1
+++ b/redhat/kernel.changelog-8.1
@@ -1,3 +1,219 @@
+* Fri Jun 07 2019 Herton R. Krzesinski <herton@redhat.com> [4.18.0-102.el8]
+- [netdrv] igb: Fix WARN_ONCE on runtime suspend (Corinna Vinschen) [1659168]
+- [netdrv] igb: use struct_size() helper (Corinna Vinschen) [1659168]
+- [netdrv] flow_offload: add flow_rule and flow_match structures and use them (Corinna Vinschen) [1659168]
+- [netdrv] igb: Bump version number (Corinna Vinschen) [1659168]
+- [netdrv] Revert "igb: reduce CPU0 latency when updating statistics" (Corinna Vinschen) [1659168]
+- [netdrv] igb: Fix an issue that PME is not enabled during runtime suspend (Corinna Vinschen) [1659168]
+- [netdrv] igb: Change RXPBSIZE size when setting Qav mode (Corinna Vinschen) [1659168]
+- [netdrv] igb: reduce CPU0 latency when updating statistics (Corinna Vinschen) [1659168]
+- [netdrv] igb: fix uninitialized variables (Corinna Vinschen) [1659168]
+- [netdrv] ethernet/intel: consolidate NAPI and NAPI exit (Corinna Vinschen) [1659168]
+- [netdrv] igb: Fix format with line continuation whitespace (Corinna Vinschen) [1659168]
+- [netdrv] igb: extend PTP gettime function to read system clock (Corinna Vinschen) [1659168]
+- [netdrv] i40e/ixgbe/igb: fail on new WoL flag setting WAKE_MAGICSECURE (Corinna Vinschen) [1659168]
+- [netdrv] intel-ethernet: software timestamp skbs as late as possible (Corinna Vinschen) [1659168]
+- [netdrv] igb: remove ndo_poll_controller (Corinna Vinschen) [1659168]
+- [netdrv] intel-ethernet: use correct module license (Corinna Vinschen) [1659168]
+- [netdrv] igb: Replace mdelay() with msleep() in igb_integrated_phy_loopback() (Corinna Vinschen) [1659168]
+- [netdrv] igb: Replace GFP_ATOMIC with GFP_KERNEL in igb_sw_init() (Corinna Vinschen) [1659168]
+- [netdrv] igb: Use an advanced ctx descriptor for launchtime (Corinna Vinschen) [1659168]
+- [netdrv] igb: e1000_phy: Mark expected switch fall-through (Corinna Vinschen) [1659168]
+- [netdrv] igb: e1000_82575: Mark expected switch fall-through (Corinna Vinschen) [1659168]
+- [netdrv] igb_main: Mark expected switch fall-throughs (Corinna Vinschen) [1659168]
+- [netdrv] igb: Use dma_wmb() instead of wmb() before doorbell writes (Corinna Vinschen) [1659168]
+- [netdrv] igb: Add support for ETF offload (Corinna Vinschen) [1659168]
+- [netdrv] igb: Only call skb_tx_timestamp after descriptors are ready (Corinna Vinschen) [1659168]
+- [netdrv] igb: Refactor igb_offload_cbs() (Corinna Vinschen) [1659168]
+- [netdrv] igb: Only change Tx arbitration when CBS is on (Corinna Vinschen) [1659168]
+- [netdrv] igb: Refactor igb_configure_cbs() (Corinna Vinschen) [1659168]
+- [fs] Revert "[fs] ext4: protect journal inode's blocks using block_validity" (Lukas Czerner) [1716549]
+- [fs] xfs: don't trip over uninitialized buffer on extent read of corrupted inode (Bill O'Donnell) [1715942]
+- [fs] xfs: always init bma in xfs_bmapi_write (Bill O'Donnell) [1715942]
+- [lib] rhashtable: Still do rehash when we get EEXIST (Vladis Dronov) [1712457]
+- [fs] vmcore: Add a kernel parameter novmcoredd (Kairui Song) [1705864]
+- [powerpc] powerpc/eeh: Correct retries in eeh_pe_reset_full() (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: Improve recovery of passed-through devices (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: Add include_passed to eeh_clear_pe_frozen_state() (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: Add include_passed to eeh_pe_state_clear() (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: remove sw_state from eeh_unfreeze_pe() (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: Cleanup eeh_pe_clear_frozen_state() (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: Cleanup control flow in eeh_handle_normal_event() (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: Cleanup eeh_ops.wait_state() (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: Cleanup eeh_pe_state_mark() (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: Cleanup unnecessary eeh_pe_state_mark_with_cfg() (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: Cleanup eeh_enabled() (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: Cleanup logic in eeh_rmv_from_parent_pe() (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: Cleanup field names in eeh_rmv_data (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: Cleanup list_head field names (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: Cleanup eeh_add_virt_device() (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: Cleanup unused field in eeh_dev (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: Cleanup EEH_POSTPONED_PROBE (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: Avoid misleading message "EEH: no capable adapters found" (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: Fix use of EEH_PE_KEEP on wrong field (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: Fix null deref for devices removed during EEH (Sam Bobroff) [1352405]
+- [powerpc] powerpc/eeh: Fix possible null deref in eeh_dump_dev_log() (Sam Bobroff) [1352405]
+- [edac] x86/MCE/AMD, EDAC/mce_amd: Add new error descriptions for some SMCA bank types (Janakarajan Natarajan) [1688469]
+- [x86] x86/MCE/AMD, EDAC/mce_amd: Add new McaTypes for CS, PSP, and SMU units (Janakarajan Natarajan) [1688469]
+- [x86] x86/MCE/AMD, EDAC/mce_amd: Add new MP5, NBIO, and PCIE SMCA bank types (Janakarajan Natarajan) [1688469]
+- [scsi] megaraid_sas: remove tech preview from Aero series (Tomas Henzl) [1668409]
+- [scsi] megaraid_sas: sync with mainline (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: fix spelling mistake "oustanding" -> "outstanding" (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: Make megasas_host_device_list_query() static (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: reduce module load time (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: Remove a bunch of set but not used variables (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: return error when create DMA pool failed (Tomas Henzl) [1668409] {CVE-2019-11810}
+- [scsi] scsi: megaraid_sas: driver version update (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: Update structures for HOST_DEVICE_LIST DCMD (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: Add support for DEVICE_LIST DCMD in driver (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: Rework device add code in AEN path (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: Rework code to get PD and LD list (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: correct an info message (Tomas Henzl) [1668409]
+- [scsi] cross-tree: phase out dma_zalloc_coherent() (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid: fix out-of-bound array accesses (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: changes to function prototypes (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: NULL check before some freeing functions is not needed (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas_fusion: Mark expected switch fall-through (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid: megaraid_sas_base: Mark expected switch fall-through (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: modify max supported lds related print (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: remove unused macro (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: increase timeout for IOC INIT to 180seconds (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: Remove double endian conversion (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: Re-use max_mfi_cmds to calculate queue sizes (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: Rename scratch_pad registers (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: Remove spin lock for dpc operation (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: optimize raid context access in IO path (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: Fail init if heartbeat timer fails (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: For SRIOV, do not set STOP_ADP bit (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: Fix combined reply queue mode detection (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: Fix module parameter description (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: Fix goto labels in error handling (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: Update copyright information (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: Add check for reset adapter bit (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: Fix msleep granularity (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: Add support for FW snap dump (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: Add watchdog thread to detect Firmware fault (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: switch to generic DMA API (Tomas Henzl) [1668409]
+- [scsi] scsi: megaraid_sas: fix a missing-check bug (Tomas Henzl) [1668409]
+- [kernel] get_maintainer.pl: Add default .get_maintainer.conf file for RHEL (Prarit Bhargava) [1714630]
+- [scripts] get_maintainer: allow option --mpath <directory> to read all files in <directory> (Prarit Bhargava) [1714630]
+- [scripts] get_maintainer.pl: add -mpath=<path or file> for MAINTAINERS file location (Prarit Bhargava) [1714630]
+- [scripts] get_maintainer: allow usage outside of kernel tree (Prarit Bhargava) [1714630]
+- [scripts] Revert "[scripts] get_maintainer.pl: Add optional .get_maintainer.MAINTAINERS override" (Prarit Bhargava) [1714630]
+- [include] signal: Make siginmask safe when passed a signal of 0 (Waiman Long) [1714351]
+- [fs] signal: Don't send signals to tasks that don't exist (Waiman Long) [1714351]
+- [kernel] signal: Restore the stop PTRACE_EVENT_EXIT (Waiman Long) [1714351]
+- [kernel] signal: Better detection of synchronous signals (Waiman Long) [1714351]
+- [kernel] signal: Always notice exiting tasks (Waiman Long) [1714351]
+- [kernel] signal: Always attempt to allocate siginfo for SIGSTOP (Waiman Long) [1714351]
+- [kernel] signal: Guard against negative signal numbers in copy_siginfo_from_user32 (Waiman Long) [1714351]
+- [kernel] signal: Guard against negative signal numbers in copy_siginfo_from_user (Waiman Long) [1714351]
+- [kernel] signal: In sigqueueinfo prefer sig not si_signo (Waiman Long) [1714351]
+- [include] signal: Use a smaller struct siginfo in the kernel (Waiman Long) [1714351]
+- [include] signal: Distinguish between kernel_siginfo and siginfo (Waiman Long) [1714351]
+- [kernel] signal: Introduce copy_siginfo_from_user and use it's return value (Waiman Long) [1714351]
+- [arm64] signal: Remove the need for __ARCH_SI_PREABLE_SIZE and SI_PAD_SIZE (Waiman Long) [1714351]
+- [kernel] signal: Fail sigqueueinfo if si_signo != sig (Waiman Long) [1714351]
+- [kernel] signal/sparc: Move EMT_TAGOVF into the generic siginfo.h (Waiman Long) [1714351]
+- [mm] signal/arm: Use force_sig_fault where appropriate (Waiman Long) [1714351]
+- [arm64] signal/arm64: Use send_sig_fault where appropriate (Waiman Long) [1714351]
+- [arm64] signal/arm64: Add and use arm64_force_sig_ptrace_errno_trap (Waiman Long) [1714351]
+- [arm64] signal/arm64: In ptrace_hbptriggered name the signal description string (Waiman Long) [1714351]
+- [arm64] signal/arm64: Remove arm64_force_sig_info (Waiman Long) [1714351]
+- [arm64] signal/arm64: Add and use arm64_force_sig_mceerr as appropriate (Waiman Long) [1714351]
+- [arm64] signal/arm64: Add and use arm64_force_sig_fault where appropriate (Waiman Long) [1714351]
+- [mm] signal/arm64: Only call set_thread_esr once in do_page_fault (Waiman Long) [1714351]
+- [mm] signal/arm64: Only perform one esr_to_fault_info call in do_page_fault (Waiman Long) [1714351]
+- [mm] signal/arm64: Expand __do_user_fault and remove it (Waiman Long) [1714351]
+- [mm] signal/arm64: For clarity separate the 3 signal sending cases in do_page_fault (Waiman Long) [1714351]
+- [mm] signal/arm64: Consolidate the two hwpoison cases in do_page_fault (Waiman Long) [1714351]
+- [mm] signal/arm64: Factor set_thread_esr out of __do_user_fault (Waiman Long) [1714351]
+- [arm64] signal/arm64: Factor out arm64_show_signal from arm64_force_sig_info (Waiman Long) [1714351]
+- [arm64] signal/arm64: Remove unneeded tsk parameter from arm64_force_sig_info (Waiman Long) [1714351]
+- [arm64] signal/arm64: Push siginfo generation into arm64_notify_die (Waiman Long) [1714351]
+- [powerpc] signal/powerpc: Use force_sig_fault where appropriate (Waiman Long) [1714351]
+- [powerpc] signal/powerpc: Simplify _exception_pkey by using force_sig_pkuerr (Waiman Long) [1714351]
+- [powerpc] signal/powerpc: Specialize _exception_pkey for handling pkey exceptions (Waiman Long) [1714351]
+- [powerpc] signal/powerpc: Call force_sig_fault from _exception (Waiman Long) [1714351]
+- [powerpc] signal/powerpc: Factor the common exception code into exception_common (Waiman Long) [1714351]
+- [powerpc] powerpc/traps: Print unhandled signals in a separate function (Waiman Long) [1714351]
+- [mm] signal/powerpc: Remove pkey parameter from __bad_area_nosemaphore (Waiman Long) [1714351]
+- [mm] signal/powerpc: Call _exception_pkey directly from bad_key_fault_exception (Waiman Long) [1714351]
+- [mm] signal/powerpc: Remove pkey parameter from __bad_area (Waiman Long) [1714351]
+- [mm] signal/powerpc: Use force_sig_mceerr as appropriate (Waiman Long) [1714351]
+- [x86] signal/x86: Use force_sig_fault where appropriate (Waiman Long) [1714351]
+- [mm] signal/x86: Pass pkey by value (Waiman Long) [1714351]
+- [mm] signal/x86: Replace force_sig_info_fault with force_sig_fault (Waiman Long) [1714351]
+- [mm] signal/x86: Call force_sig_pkuerr from __bad_area_nosemaphore (Waiman Long) [1714351]
+- [mm] signal/x86: Pass pkey not vma into __bad_area (Waiman Long) [1714351]
+- [mm] signal/x86: Don't compute pkey in __do_page_fault (Waiman Long) [1714351]
+- [mm] signal/x86: Remove pkey parameter from mm_fault_error (Waiman Long) [1714351]
+- [mm] signal/x86: Remove the pkey parameter from do_sigbus (Waiman Long) [1714351]
+- [mm] signal/x86: Remove pkey parameter from bad_area_nosemaphore (Waiman Long) [1714351]
+- [x86] signal/x86/traps: Simplify trap generation (Waiman Long) [1714351]
+- [x86] signal/x86/traps: Use force_sig instead of open coding it. (Waiman Long) [1714351]
+- [x86] signal/x86/traps: Use force_sig_bnderr (Waiman Long) [1714351]
+- [x86] signal/x86/traps: Move more code into do_trap_no_signal so it can be reused (Waiman Long) [1714351]
+- [x86] signal/x86/traps: Factor out show_signal (Waiman Long) [1714351]
+- [x86] signal/x86: Move mpx siginfo generation into do_bounds (Waiman Long) [1714351]
+- [x86] signal/x86: In trace_mpx_bounds_register_exception add __user annotations (Waiman Long) [1714351]
+- [mm] signal/x86: Move MCE error reporting out of force_sig_info_fault (Waiman Long) [1714351]
+- [x86] signal/x86: Inline fill_sigtrap_info in it's only caller send_sigtrap (Waiman Long) [1714351]
+- [powerpc] signal: Simplify tracehook_report_syscall_exit (Waiman Long) [1714351]
+- [kernel] signal: Pair exports with their functions (Waiman Long) [1714351]
+- [kernel] signal: Remove specific_send_sig_info (Waiman Long) [1714351]
+- [kernel] signal: Use group_send_sig_info to kill all processes in a pid namespace (Waiman Long) [1714351]
+- [tty] tty_io: Use group_send_sig_info in __do_SACK to note it is a session being killed (Waiman Long) [1714351]
+- [misc] signal/GenWQE: Fix sending of SIGKILL (Waiman Long) [1714351]
+- [include] signal: Remove SEND_SIG_FORCED (Waiman Long) [1714351]
+- [kernel] signal: Use SEND_SIG_PRIV not SEND_SIG_FORCED with SIGKILL and SIGSTOP (Waiman Long) [1714351]
+- [kernel] signal: Never allocate siginfo for SIGKILL or SIGSTOP (Waiman Long) [1714351]
+- [usb] signal: Don't send siginfo to kthreads. (Waiman Long) [1714351]
+- [usb] signal: Remove the siginfo paramater from kernel_dqueue_signal (Waiman Long) [1714351]
+- [tty] signal: send_sig_all no longer needs SEND_SIG_FORCED (Waiman Long) [1714351]
+- [kernel] signal: Always deliver the kernel's SIGKILL and SIGSTOP to a pid namespace init (Waiman Long) [1714351]
+- [x86] signal: Properly deliver SIGSEGV from x86 uprobes (Waiman Long) [1714351]
+- [kernel] signal: Properly deliver SIGILL from uprobes (Waiman Long) [1714351]
+- [kernel] signal: Always ignore SIGKILL and SIGSTOP sent to the global init (Waiman Long) [1714351]
+- [iommu] mm: convert return type of handle_mm_fault() caller to vm_fault_t (Waiman Long) [1714351]
+- [kernel] signal: make get_signal() return bool (Waiman Long) [1714351]
+- [kernel] signal: make sigkill_pending() return bool (Waiman Long) [1714351]
+- [kernel] signal: make legacy_queue() return bool (Waiman Long) [1714351]
+- [kernel] signal: make wants_signal() return bool (Waiman Long) [1714351]
+- [kernel] signal: make flush_sigqueue_mask() void (Waiman Long) [1714351]
+- [kernel] signal: make unhandled_signal() return bool (Waiman Long) [1714351]
+- [kernel] signal: make recalc_sigpending_tsk() return bool (Waiman Long) [1714351]
+- [kernel] signal: make has_pending_signals() return bool (Waiman Long) [1714351]
+- [kernel] signal: make sig_ignored() return bool (Waiman Long) [1714351]
+- [kernel] signal: make sig_task_ignored() return bool (Waiman Long) [1714351]
+- [kernel] signal: make sig_handler_ignored() return bool (Waiman Long) [1714351]
+- [kernel] signal: make kill_ok_by_cred() return bool (Waiman Long) [1714351]
+- [kernel] signal: simplify rt_sigaction() (Waiman Long) [1714351]
+- [kernel] signal: make do_sigpending() void (Waiman Long) [1714351]
+- [kernel] signal: make may_ptrace_stop() return bool (Waiman Long) [1714351]
+- [kernel] signal: make kill_as_cred_perm() return bool (Waiman Long) [1714351]
+- [kernel] signal: make force_sigsegv() void (Waiman Long) [1714351]
+- [kernel] signal: Don't restart fork when signals come in. (Waiman Long) [1714351]
+- [kernel] fork: Have new threads join on-going signal group stops (Waiman Long) [1714351]
+- [include] fork: Skip setting TIF_SIGPENDING in ptrace_init_task (Waiman Long) [1714351]
+- [kernel] signal: Add calculate_sigpending() (Waiman Long) [1714351]
+- [kernel] fork: Unconditionally exit if a fatal signal is pending (Waiman Long) [1714351]
+- [kernel] fork: Move and describe why the code examines PIDNS_ADDING (Waiman Long) [1714351]
+- [kernel] signal: Push pid type down into complete_signal. (Waiman Long) [1714351]
+- [kernel] signal: Push pid type down into __send_signal (Waiman Long) [1714351]
+- [kernel] signal: Push pid type down into send_signal (Waiman Long) [1714351]
+- [tty] signal: Pass pid type into do_send_sig_info (Waiman Long) [1714351]
+- [fs] signal: Pass pid type into send_sigio_to_task & send_sigurg_to_task (Waiman Long) [1714351]
+- [kernel] signal: Pass pid type into group_send_sig_info (Waiman Long) [1714351]
+- [kernel] signal: Pass pid and pid type into send_sigqueue (Waiman Long) [1714351]
+- [kernel] posix-timers: Noralize good_sigevent (Waiman Long) [1714351]
+- [fs] signal: Use PIDTYPE_TGID to clearly store where file signals will be sent (Waiman Long) [1714351]
+- [kernel] pid: Implement PIDTYPE_TGID (Waiman Long) [1714351]
+- [include] pids: Move the pgrp and session pid pointers from task_struct to signal_struct (Waiman Long) [1714351]
+- [fs] pids: Compute task_tgid using signal->leader_pid (Waiman Long) [1714351]
+- [kernel] pids: Move task_pid_type into sched/signal.h (Waiman Long) [1714351]
+- [init] pids: Initialize leader_pid in init_task (Waiman Long) [1714351]
+
 * Thu Jun 06 2019 Herton R. Krzesinski <herton@redhat.com> [4.18.0-101.el8]
 - [s390] s390: enable processes for mio instructions (Philipp Rudo) [1651734]
 - [s390] s390/pci: add parameter to disable usage of MIO instructions (Philipp Rudo) [1651734]
